# quantcore

./: .gitignore  Cargo.toml  build_and_test.sh  xmake.lua
quantcore/: qc.h
quantcore/time/: period.h  unit.cc  unit.h
tests/time/: unit_test.cc
