[package]
name = "quantcore"
version = "0.1.0"
edition = "2021"
authors = ["Akshay Ajagekar <ajagekar.akshay@gmail.com>"]
description = "Quantitative Finance Rust Library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ajagekarakshay/quantcore"

[dependencies]
chrono = "0.4.38"
serde = { version = "1.0.215", features = ["derive"] }
nalgebra = "0.33.2"
rayon = "1.10.0"
linfa = "0.7.0"
